# apex

./: .gitignore  CLAUDE.md  f1_architecture.md
.claude/: settings.local.json
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/v1/: circuits.py  drivers.py  head_to_head.py  races.py  router.py  schedule.py  standings.py  teams.py
backend/app/cache/: redis.py
backend/app/db/: connection.py  schema.sql
backend/app/db/queries/: circuits.py  drivers.py  head_to_head.py  races.py  schedule.py  standings.py  teams.py
backend/app/models/: circuit.py  common.py  driver.py  race.py  schedule.py  standing.py  strategy.py  team.py
backend/app/services/: circuit_service.py  driver_service.py  race_service.py  schedule_service.py  standing_service.py  team_service.py
databricks/: config.py  schemas.json
databricks/bronze/: ingest_jolpica.py  ingest_openf1.py
databricks/gold/: aggregate.py
databricks/jobs/: check_silver.py  debug_silver.py  gold_to_supabase.py  reingest_all_years.py  run_full_pipeline.py  run_silver_all.py
databricks/seeds/: seed_circuits.py  seed_team_details.py
databricks/silver/: transform_jolpica.py  transform_openf1.py
docs/: api-contract.md  directory-structure.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/circuits/: page.tsx
frontend/app/drivers/: page.tsx
frontend/app/guide/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  utils.ts
(+56 files in other folders)
